[metadata]
name = crosstream
version = 1.0.0
author = Bert Wagner
description = A package for streaming cross-server dataset joins in memory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bertwagner/crosstream
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pyodbc

[options.packages.find]
where = src

[options.extras_require]
test = 
    pytest
    pytest-cov
